# robautonoma-2024

./: LICENSE  README.md
autlab2/: CMakeLists.txt  package.xml
autlab2/launch/: turtlebot3_qrworld.launch  visp_tracker.launch
autlab2/src/: lidar_local  mapa_lidar  plot_lidar.py  robot_obstaculo  show_image
autlab2/worlds/: QR_empty.world
autlab3/launch/: turtlebot3_world2.launch  turtlebot3_world3.launch  turtlebot3_world4.launch  turtlebot3_world5.launch
autlab3/worlds/: turtlebot3_world2.world  turtlebot3_world3.world  turtlebot3_world4.world  turtlebot3_world5.world
autlab4/: CMakeLists.txt  package.xml
autlab4/config/: Pcl.cfg  controllers.yaml  perception.rviz
autlab4/launch/: cam_bringup.launch  cam_bringup_empty.launch  road.launch  robot_control.launch  robot_description.launch
autlab4/models/soda_can/meshes/: soda_can.dae
autlab4/src/: clustering.py  pass-through.py  pcl_helper.py  remocion-ruido.py  save_pcd.py  segmentacion.py  submuestreo.py
autlab4/src/cpp/: cloud_transformer.cpp
autlab4/urdf/: autlab4_stick.gazebo.xacro  autlab4_stick.urdf.xacro
autlab4/worlds/: table_perception.world
