<?xml version="1.0"?>
<package format="2">
  <name>autlab4</name>
  <version>0.0.0</version>
  <description>The autlab4 package</description>

  <maintainer email="alexander@todo.todo">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>effort_controllers</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>position_controllers</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>effort_controllers</build_export_depend>
  <build_export_depend>gazebo_plugins</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>gazebo_ros_control</build_export_depend>
  <build_export_depend>joint_state_controller</build_export_depend>
  <build_export_depend>joint_state_publisher</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>position_controllers</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rospy</exec_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
